# duskmantle

./: .coverage  .gitignore  .markdownlint.jsonc  =2.1  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  Makefile  README.md  RELEASE.md  RELEASE101_PACKAGES.md  STATUS.md  STATUS_WP4_NOTES.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  tmp_module_summary.json  tsconfig.json
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: neo4j-integration.yml  observability.yml  release.yml
audit/: AUDIT_SUMMARY.md  MODULE_DOCUMENTATION.md  QUICK_WINS.md  RISK_REGISTER.md  SYSTEM_DOCUMENTATION.md  WORK_PACKAGES.md  module_introspection.json  work_packages_summary.json
backups/: km-backup-20250927T231955.tgz
docs/: ACCEPTANCE_DEMO_PLAYBOOK.md  ACCEPTANCE_DEMO_SNAPSHOT.md  API_APP_REFACTOR_PLAN.md  CONFIG_REFERENCE.md  DASHBOARD_SEARCH_HEALTH.md  DEPLOYMENT.md  DRAFT_PR1.md  GRAPH_API_DESIGN.md  HYBRID_SEARCH_TODO.md  KNOWLEDGE_MANAGEMENT.md  KNOWLEDGE_MANAGEMENT_DESIGN.md  KNOWLEDGE_MANAGEMENT_IMPLEMENTATION_PLAN.md  MCP_AGENT_PLAYBOOK.md  MCP_INTEGRATION.md  MCP_INTERFACE_SPEC.md  MCP_RECIPES.md  MCP_RECIPES_DESIGN.md  OBSERVABILITY_GUIDE.md  OPERATIONS.md  QUICK_START.md  RISK_MITIGATION_PLAN.md  ROADMAP.md  SEARCH_SCORING_PLAN.md  TESTING.md  UI_SPIKE_REPORT.md  UPGRADE_ROLLBACK.md  WORK_PACKAGES.md  WP5_EXECUTION_PLAN.md  WP6_RELEASE_TOOLING_PLAN.md  subsystems.json
docs/archive/: README.md  WORK_PACKAGES.md
docs/dashboards/: README.md  gateway_overview.json
docs/spikes/: phase0_risk_reduction.md
gateway/: __init__.py  __main__.py  requirements.txt  scheduler.py
gateway/api/: __init__.py  app.py  auth.py  connections.py  constants.py  dependencies.py
gateway/backup/: __init__.py  exceptions.py  service.py
gateway/config/: __init__.py  settings.py
gateway/graph/: __init__.py  cli.py  service.py
gateway/ingest/: __init__.py  (+12 more)
infra/: docker-entrypoint.sh  neo4j.conf  qdrant.yaml  smoke-test.sh  supervisord.conf
recipes/: release-prep.yaml  stale-audit.yaml  subsystem-freshness.yaml
scripts/: build-image.sh  build-wheel.sh  checksums.sh  generate-changelog.py  run_bge_ingest.py  test_bge_m3.py
tests/: __init__.py  conftest.py  playwright_server.py  test_api_security.py  test_app_smoke.py  test_connection_managers.py  test_coverage_report.py  test_discovery_symbols.py  test_graph_api.py  test_graph_auto_migrate.py  test_graph_cli.py  test_graph_database_validation.py  test_graph_migrations.py  test_graph_service_startup.py  test_graph_service_unit.py  test_graph_validation.py  test_ingest_cli.py  test_ingest_pipeline.py  test_km_watch.py  test_lifecycle_cli.py  test_lifecycle_report.py  test_mcp_recipes.py  test_mcp_smoke_recipes.py  test_neo4j_writer.py  test_qdrant_writer.py  test_recipes_executor.py  test_release_scripts.py  test_scheduler.py  test_search_api.py  test_search_cli_show_weights.py  test_search_evaluation.py  test_search_exporter.py  test_search_feedback.py  test_search_maintenance.py  test_search_profiles.py  test_search_service.py  test_settings_defaults.py  test_symbol_extraction.py  test_symbol_linking.py  test_tracing.py  (+2 more)
(+85 files in other folders)
