[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duskmantle-knowledge-gateway"
version = "0.1.0"
description = "Turnkey knowledge management gateway packaged with Qdrant and Neo4j"
readme = "README.md"
authors = [{ name = "Duskmantle" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10",
  "qdrant-client>=1.7",
  "neo4j>=5.14",
  "sentence-transformers>=2.2",
  "python-dotenv>=1.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "black>=24.2",
  "ruff>=0.3",
  "pytest>=8.1",
  "pytest-cov>=4.1",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway", "gateway.*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["gateway", "tests"]
select = ["E", "F", "B", "I", "UP", "Q", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gateway"]
